# chronotui

./: .gitignore  README.md  main.py  pyproject.toml
src/chronotui/: __main__.py  app.py  stopwatch.tcss
src/chronotui/config/: defaults.py
src/chronotui/widgets/: confirm_screen.py  delete_confirm_screen.py  settings_screen.py  stopwatch.py  time_display.py
