[project]
name = "chronotui"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.8",
    "textual>=3.7.1",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.rst"]

[project.scripts]
chronotui = "chronotui.app:main"