[project]
name = "chronotui"
version = "0.3.0"
description = "Python TUI with Textual for tracking time "
readme = "README.md"
authors = [
  {name = "Šimon Růžička", email = "simon.ruzicka@protonmail.com"},
  {name = "Filip Špelina", email = "filip.spelina@proton.me"},
]

requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.3.8",
    "textual>=3.7.1",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.rst"]

[project.scripts]
chronotui = "chronotui.app:main"

[project.urls]
Homepage = "https://github.com/ruzicka02/chronotui"
Repository = "https://github.com/ruzicka02/chronotui.git"